force-app/main/default/objects/Revenue_Forecast__c/Revenue_Forecast__c.object-meta.xml
<CustomObject>
    <label>年度別受注予測</label>
    <nameField>
        <displayFormat>RF-{0000}</displayFormat>
        <label>予測番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>年度別受注予測</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>