force-app/main/default/objects/Revenue_Forecast__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>対象年度</label>
    <required>true</required>
    <type>Text</type>
    <length>10</length>
</CustomField>