force-app/main/default/objects/Revenue_Forecast__c/fields/Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount__c</fullName>
    <label>予測金額</label>
    <formula>Forecast_Quantity__c * Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>