force-app/main/default/objects/Revenue_Forecast__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>年度別受注予測</relationshipLabel>
    <relationshipName>Revenue_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>