force-app/main/default/objects/Revenue_Forecast__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <label>確度(%)</label>
    <formula>Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>