force-app/main/default/objects/Revenue_Forecast__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>製品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>年度別受注予測</relationshipLabel>
    <relationshipName>Revenue_Forecasts</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>