force-app/main/default/objects/Revenue_Forecast__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>予測中</fullName>
                <default>true</default>
                <label>予測中</label>
            </value>
            <value>
                <fullName>契約移行済</fullName>
            </value>
            <value>
                <fullName>失注</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>