force-app/main/default/objects/Revenue_Forecast__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>想定単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>