force-app/main/default/objects/Revenue_Forecast__c/fields/Weighted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Amount__c</fullName>
    <label>加重金額</label>
    <formula>Forecast_Amount__c * Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>